Fix DEBIAN_FRONTEND in Dockerfile

--- a/build-ctx/Dockerfile
+++ b/build-ctx/Dockerfile
@@ -78,6 +78,6 @@ RUN \
 COPY --chown=0:0 files/bash/dot_bashrc /root/.bashrc
 
 #
-ENV DEBIAN_FRONTEND=newt
+ENV DEBIAN_FRONTEND=dialog
 
 WORKDIR /root/
